--- a/stylecurriculum.css
+++ b/stylecurriculum.css
@@ -2,8 +2,64 @@ html {
     font-family: 'Mynerve', cursive;
 }
 
+body {
+    margin: 0;
+    background-color: #a9ffff;
+}
+
+header {
+    background-color: #486c8b;
+    color: rgb(163, 121, 121);
+    padding: 3rem 2rem;
+}
+
+header h1 {
+    font-size: 4rem;
+    text-align: center;
+}
 
 .container {
     width: 400px;
     margin: 0 auto;
+}
+
+section article {
+    transition: all 0.4s ease;
+    background-color: #fff;
+    margin: 1rem 0;
+    border-radius: 0.5rem;
+    padding: 0.25rem 0;
+    cursor: pointer;
+}
+
+section article:hover {
+    box-shadow: 0 0.1rem 0.4rem rgba(0,0,0,0.3)
+}
+
+section article h2, section article p {
+    margin: 1rem;
+}
+
+footer {
+    background-color: #222;
+    padding: 3rem;
+    color: #fff;
+}
+
+footer section {
+    float: right;
+}
+
+footer p {
+    margin: 0;
+}
+
+footer a {
+    color: #fff;
+    text-decoration: none;
+}
+
+footer a:hover {
+    transition: 0.3s ease;
+    color: rgb(43, 155, 118);
 }
